<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment">

    <com.gotomypub.customviews.FontTextView
        android:id="@+id/txt_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:lines="1"
        android:text="@string/distance_label"
        android:gravity="center_vertical"
        />

    <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:min_value="5"
        app:max_value="100"
        app:data_type="_integer"
        app:steps="5"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" >
<!--
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_transparent"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            style="@style/MyCustomTabLayout"
            >

        </android.support.design.widget.TabLayout>
-->
        <RadioGroup
            android:id="@+id/search_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_transparent"
            android:weightSum="2"
            android:layout_margin="10dp"
            >
            <RadioButton
                android:id="@+id/radio_normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/simple_search"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:textColor="@color/navigation_color"
                android:background="@drawable/tab_lef_background"
                />

            <RadioButton
                android:id="@+id/radio_advance"
                android:layout_height="match_parent"
                android:text="@string/advanced_search"
                android:button="@null"
                android:background="@drawable/tab_right_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/navigation_color"
                />
        </RadioGroup>

    </FrameLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/search_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>

</LinearLayout>